# src/app/Http/Controllers/Controller.php
@@ -2,4 +2,17 @@
 
 namespace App\Http\Controllers;
 
+/**
+ * @OA\Info(
+ *    title="Swagger with Laravel",
+ *    version="1.0.0",
+ * )
+ * @OA\SecurityScheme(
+ *     type="http",
+ *     securityScheme="bearerAuth",
+ *     scheme="bearer",
+ *     bearerFormat="JWT"
+ * )
+
+ */
 abstract class Controller {}
