# src/app/Infrastructure/Abstraction/Service/IOrderService.php
@@ -6,5 +6,7 @@ interface IOrderService
 {
     public function createOrder($customerId, $products);
     public function getOrders($customerId, $orderPackageId = null);
-    public function getDiscount($orderPackageId);
+    public function cancelOrderPackage($customerId, $orderPackageId);
+    public function updateOrderPackage($customerId, $orderPackageId, $payload);
+    public function getDiscount($customerId, $orderPackageId);
 }
